testsuite/tests/splice-imports/SI18.hs
{-# LANGUAGE TemplateHaskellQuotes #-}
{-# LANGUAGE NoMonomorphismRestriction #-}
{-# LANGUAGE NoImplicitStagePersistence #-}
module SI18 where

boo a = 'a
